--- a/dashboardsidebar.css
+++ b/dashboardsidebar.css
@@ -185,9 +185,10 @@ body {
 }
 
 .status-waiting {
-  background-color: #fff9c4;
+  background-color: white;
   color: black;
 }
+
 
 /* Modal Styles */
 .modal-overlay {
