--- a/dashboardsidebar.css
+++ b/dashboardsidebar.css
@@ -244,3 +244,26 @@ body {
 .modal .close-btn:hover {
   background-color: #b71c1c;
 }
+
+/* Status Row Coloring */
+.status-approved td {
+  background-color: green;
+  color: white;
+}
+
+.status-rejected td {
+  background-color: red;
+  color: white;
+}
+
+.status-waiting td {
+  background-color: white;
+  color: black;
+}
+
+/* Make table adapt to content width */
+.status-table {
+  table-layout: auto;
+  width: 100%;
+}
+
